--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:css": "sass assets/scss/main.scss assets/css/main.css",
+    "watch:css": "sass --watch assets/scss/main.scss:assets/css/main.css"
   },
   "keywords": [],
   "author": "",
